--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "migrate": "npx sequelize-cli db:migrate",
-    "init": "node ./src/app.js",
+    "init": "node ./src/server.js",
     "start": "npm run migrate && npm run init",
-    "dev": "nodemon ./src/app.js",
-    "test": "jest --verbose"
+    "dev": "nodemon ./src/server.js",
+    "test": "jest --verbose --coverage"
   },
   "keywords": [],
   "author": "",
